--- a/src/assets/sass/_rootColor.scss
+++ b/src/assets/sass/_rootColor.scss
@@ -1,8 +1,14 @@
-$background: #f3f5f8;
+$backgroundLight: #f3f5f8;
 $gray: #6c757d;
-$darkGray1: #2a2e33;
-$darkGray2: #272b30;
+$backgroundDark: #2a2e33;
+$backgroundDark2: #272b30;
+$bgCard: #32383e;
 $light: #fff;
 $navyBlue: #2196f3;
 $yellow: #fcda5f;
+$lightBlue1: #0069d9;
+$lightBlue2: #0062cc;
 $blue: #263bc4;
+$blue2: #102192;
+$fontLight: #002246;
+$fontDark: #e8e8e8;
