--- a/src/assets/sass/_rootColor.scss
+++ b/src/assets/sass/_rootColor.scss
@@ -1,7 +1,9 @@
 $backgroundLight: #f3f5f8;
 $gray: #6c757d;
+$grayLight: #e1e5e7;
 $backgroundDark: #2a2e33;
 $backgroundDark2: #272b30;
+$backgroundDarkDeep: #1c1d1f;
 $bgCard: #32383e;
 $light: #fff;
 $navyBlue: #2196f3;
