--- a/src/assets/sass/_rootColor.scss
+++ b/src/assets/sass/_rootColor.scss
@@ -1,6 +1,7 @@
 $backgroundLight: #f3f5f8;
 $gray: #6c757d;
-$grayLight: #e1e5e7;
+$grayLight: #aaa;
+$grayVeryLight: #e1e5e7;
 $backgroundDark: #2a2e33;
 $backgroundDark2: #272b30;
 $backgroundDarkDeep: #1c1d1f;
