--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -8,6 +8,11 @@
   scroll-behavior: smooth;
 }
 
+html,
+body {
+  height: 98%;
+}
+
 ::-webkit-scrollbar {
   width: 10px;
 }
@@ -124,6 +129,17 @@
 
 .fadeInOutTop-enter-active,
 .fadeInOutTop-leave-active {
+  transition: all 0.3s ease;
+}
+
+.fadeInBottom-enter,
+.fadeInBottom-leave-to {
+  opacity: 0;
+  transform: translateY(25px);
+}
+
+.fadeInBottom-enter-active,
+.fadeInBottom-leave-active {
   transition: all 0.3s ease;
 }
 
